fixed segue flow

--- a/WalmartBucket/WalmartBucket/Base.lproj/Main.storyboard
+++ b/WalmartBucket/WalmartBucket/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="uqU-Ku-LB6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="uqU-Ku-LB6">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -37,7 +37,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9pm-Ao-chk" id="Ra9-uc-sih">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -339,7 +339,7 @@
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="Submit:" destination="uqU-Ku-LB6" eventType="touchUpInside" id="qxk-di-r5t"/>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="searchSegue" id="W65-ph-qIK"/>
+                                    <segue destination="Q6N-Yg-PGF" kind="show" identifier="searchSegue" id="tz4-BY-aZm"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -372,7 +372,4 @@
             <point key="canvasLocation" x="232.80000000000001" y="88.605697151424295"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="W65-ph-qIK"/>
-    </inferredMetricsTieBreakers>
 </document>
