--- a/WalmartBucket/WalmartBucket/Base.lproj/Main.storyboard
+++ b/WalmartBucket/WalmartBucket/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="uqU-Ku-LB6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G1036" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="uqU-Ku-LB6">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -37,7 +37,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9pm-Ao-chk" id="Ra9-uc-sih">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -110,7 +110,7 @@
                                 <state key="normal" title="Buy"/>
                                 <connections>
                                     <action selector="Buy:" destination="tha-Li-RdE" eventType="touchUpInside" id="9MK-3A-tAR"/>
-                                    <segue destination="OHf-Lu-3T2" kind="show" identifier="secondSegue" id="o2W-Jc-Nea"/>
+                                    <segue destination="OHf-Lu-3T2" kind="show" identifier="secondSegue" id="Mko-2h-thO"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pNu-ty-X75">
@@ -162,38 +162,48 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BTa-GF-YIZ" id="4cF-4K-QDw">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="bAU-Rl-klM">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BP9-MH-BI1">
-                                                            <rect key="frame" x="0.0" y="0.0" width="118.5" height="43.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqt-eQ-tpD">
-                                                            <rect key="frame" x="128.5" y="0.0" width="118" height="43.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eV9-fm-rOl">
-                                                            <rect key="frame" x="256.5" y="0.0" width="118.5" height="43.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BP9-MH-BI1">
+                                                    <rect key="frame" x="8" y="0.0" width="247" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="247" id="kgo-sI-OUa"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eV9-fm-rOl">
+                                                    <rect key="frame" x="315" y="0.0" width="60" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="9aZ-Ys-GWw"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqt-eQ-tpD">
+                                                    <rect key="frame" x="242" y="0.0" width="65" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="65" id="fQa-R6-LL2"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="bAU-Rl-klM" firstAttribute="centerX" secondItem="4cF-4K-QDw" secondAttribute="centerX" id="Df3-1S-1re"/>
-                                                <constraint firstItem="bAU-Rl-klM" firstAttribute="height" secondItem="4cF-4K-QDw" secondAttribute="height" id="Uda-oo-8sX"/>
-                                                <constraint firstItem="bAU-Rl-klM" firstAttribute="width" secondItem="4cF-4K-QDw" secondAttribute="width" id="dbl-LN-KQ3"/>
-                                                <constraint firstItem="bAU-Rl-klM" firstAttribute="centerY" secondItem="4cF-4K-QDw" secondAttribute="centerY" id="mCf-eA-5Ww"/>
+                                                <constraint firstAttribute="bottom" secondItem="BP9-MH-BI1" secondAttribute="bottom" id="BMx-Gz-ahg"/>
+                                                <constraint firstAttribute="bottom" secondItem="oqt-eQ-tpD" secondAttribute="bottom" id="Lbi-DF-ke2"/>
+                                                <constraint firstItem="BP9-MH-BI1" firstAttribute="top" secondItem="4cF-4K-QDw" secondAttribute="top" id="Myz-bf-Aza"/>
+                                                <constraint firstItem="oqt-eQ-tpD" firstAttribute="top" secondItem="4cF-4K-QDw" secondAttribute="top" id="ao0-Eb-fzm"/>
+                                                <constraint firstItem="eV9-fm-rOl" firstAttribute="top" secondItem="4cF-4K-QDw" secondAttribute="top" id="b5G-Ie-uFq"/>
+                                                <constraint firstItem="oqt-eQ-tpD" firstAttribute="leading" secondItem="BP9-MH-BI1" secondAttribute="trailing" constant="-13" id="bIB-Oh-L9x"/>
+                                                <constraint firstAttribute="trailing" secondItem="eV9-fm-rOl" secondAttribute="trailing" id="d46-eY-aVt"/>
+                                                <constraint firstAttribute="bottom" secondItem="eV9-fm-rOl" secondAttribute="bottom" id="hJD-qW-J0g"/>
+                                                <constraint firstItem="eV9-fm-rOl" firstAttribute="leading" secondItem="oqt-eQ-tpD" secondAttribute="trailing" constant="8" id="jcq-xh-ESu"/>
+                                                <constraint firstItem="BP9-MH-BI1" firstAttribute="leading" secondItem="4cF-4K-QDw" secondAttribute="leading" constant="8" id="nSn-VR-dxK"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
